26 January 2015: Wouter
	- Patches from Pavel Simerda:
		dnssec-trigger-script: check for paths, not files
			https://bugzilla.redhat.com/show_bug.cgi?id=1183975
		dnssec-trigger-script: fix secure/insecure forward zone
			switching
			https://bugzilla.redhat.com/show_bug.cgi?id=1185796
		dnssec.conf: clean up the dnssec.conf comments
		dnssec-trigger-script: log dnssec-trigger-control and
			unbound-control calls
		dnssec-trigger-script: use a global config object
		dnssec-trigger-script: add option to set search domains
			in /etc/resolv.conf
			https://bugzilla.redhat.com/show_bug.cgi?id=1130502
		dnssec-trigger-script: add (undocumented) option to avoid
			flushing positive answers
			https://bugzilla.redhat.com/show_bug.cgi?id=1105685
		dnssec-trigger-script: use private address ranges
			https://bugzilla.redhat.com/show_bug.cgi?id=1128310

21 January 2015: Wouter
	- Patches from Pavel Simerda:
		dnssec-trigger-script: clean up servers as well, for restart
		dnssec-trigger-script: prefer VPN nameservers over default ones

13 January 2015: Wouter
	- Update OSX resolvehook to flush dns caches for new OSX release
	  with "discoveryutil udnsflushcaches" and "discoveryutil
	  mdnsflushcache".
	- Patches from Pavel Simerda:
		dnssec-trigger-script: The accepted version of NetworkManager
			patch uses `resolv.conf` instead of
			`resolv.conf.default`,
			https://bugzilla.gnome.org/show_bug.cgi?id=732941
		dnssec-trigger-script: Leaking file descriptors is bad,
			especially when selinux or similar tool is used.
			https://bugzilla.redhat.com/show_bug.cgi?id=1147705
		dnssec-trigger-script: Use a regular file unless
			use_resolv_secure_conf_symlink is set. Always
			install /var/run/dnssec-trigger/resolv.conf for
			comparison.  Guard all of those regular files using
			immutable attribute.  
			https://bugzilla.redhat.com/show_bug.cgi?id=1165126
		dnssec-trigger-script: fix desktop file paths.
			

21 November 2014: Wouter
	- Patches from Pavel Simerda: