@@ -1,4 +1,4 @@
-#!/bin/sh
+#!@SHELL@
 #
 # Script to notify dnssec-trigger that the DNS configuration in NetworkManager
 # may have changed.
